[package]
name = "manage"
version = "2021.12.4"
authors = ["sthagen"]
edition = "2018"


[dependencies]
actix-web = "3"
actix-files="0.5.0"
tera = "1.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
dotenv = "0.15.0"
awc = "2.0.3"
sqlx = {version = "0.3.5", default_features = false, features = ["postgres","runtime-tokio", "macros"]}
rust-argon2 = "0.8.3"

[dev-dependencies]
actix-rt = "2.2.0"
